--- a/.github/workflows/ml_pipeline.yaml
+++ b/.github/workflows/ml_pipeline.yaml
@@ -33,6 +33,13 @@ jobs:
     - name: 📊 Evaluate Model
       run: python src/evaluation/evaluate.py
 
+    - name: 🚀 Test FastAPI Deployment
+      run: |
+        uvicorn src.deployment.deploy:app --host 0.0.0.0 --port 8000 &
+        sleep 5
+        curl --fail http://localhost:8000 || exit 1
+
+
     # Deployment stage (to be added later)
     # - name: 🚀 Deploy Model
     #   run: python src/deployment/deploy.py
